--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "agora-rtc-sdk-ng": "^4.20.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "js-cookie": "^3.0.5",
